Fix drawing offset on mobile/with overlay

--- a/src/styles/components/_canvas.scss
+++ b/src/styles/components/_canvas.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 
   @include breakpoint-up('lg') {
-    padding: 1rem;
+    // padding: 1rem;
   }
 }
 
@@ -49,6 +49,7 @@ $canvas-a5-height: 1748px;
   padding: 0.8rem 1rem;
   background-color: rgba(255,255,255,0.8);
   border: 3px dashed $secondary;
+  cursor: crosshair;
 }
 
 .multi-draw-overlay {
