--- a/src/styles/components/_pages-bar.scss
+++ b/src/styles/components/_pages-bar.scss
@@ -50,16 +50,18 @@
 
   height: 100%;
   width: 250px;
-  background-color: white;
+  background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
   padding: $topbar-heading-padding-top 10px 10px;
+  border-right: 1px solid #dddddd;
 
   @include breakpoint-down ('lg') {
     top: 0;
     left: 0;
     position: absolute;
     z-index: 100;
+    border-color: transparent;
   }
 
   &__title-container {
@@ -71,6 +73,7 @@
       display: flex;
       align-items: center;
       flex: 1;
+      user-select: none;
     }
 
     h2 {
