--- a/src/styles/components/_topbar.scss
+++ b/src/styles/components/_topbar.scss
@@ -18,6 +18,20 @@ $topbar-height: $topbar-tab-content-height + $topbar-tab-button-height;
   .topbar__tab-content {
     display: flex;
     align-items: center;
+
+    .topbar__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 0 20px 20px;
+
+      &-title {
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 0.95rem;
+        padding-bottom: 10px;
+      }
+    }
   }
 
   .topbar__button {
@@ -45,6 +59,10 @@ $topbar-height: $topbar-tab-content-height + $topbar-tab-button-height;
     &:not(.active):hover {
       background-color: #711897;
     }
+  }
+
+  .topbar__tabs {
+    display: none;
   }
 
   // mobile topbar
@@ -77,6 +95,14 @@ $topbar-height: $topbar-tab-content-height + $topbar-tab-button-height;
     .topbar__tab-content {
       width: 100%;
       height: $topbar-tab-content-height;
+
+      .topbar__content {
+        padding: 0;
+      }
+
+      .topbar__content-title {
+        display: none;
+      }
     }
   }
 
