--- a/src/styles/utilities/_transitions.scss
+++ b/src/styles/utilities/_transitions.scss
@@ -18,8 +18,16 @@
 .slide-from-left-enter-active, .slide-from-left-leave-active {
   transition: transform .25s, opacity .25s;  
   transform: translateX(0);
+
+  @include breakpoint-up('lg') {
+    transition: none;
+  }
 }
 .slide-from-left-enter, .slide-from-left-leave-to /* .fade-leave-active below version 2.1.8 */ {
   transform: translateX(-5rem) !important;
   opacity: 0;
+  
+  @include breakpoint-up('lg') {
+    transition: none;
+  }
 }
