--- a/src/styles/utilities/_vars.scss
+++ b/src/styles/utilities/_vars.scss
@@ -22,7 +22,8 @@ $text--light: #fff;
 
 $canvas-width: 1200px;
 $page-color: white;
-$large-font-size: 1.25rem; 
+$large-font-size: 1.25rem;
+$topbar-heading-font-size: 0.95rem;
 
 $body-font: 'Sen', sans-serif;
 
